k8s-manifests/platform/lab-orchestration-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-orchestration-service-deployment
  namespace: default # Ensure this matches RBAC configurations
  labels:
    app: lab-orchestration-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-orchestration-service
  template:
    metadata:
      labels:
        app: lab-orchestration-service
    spec:
      serviceAccountName: lab-orchestrator-sa # IMPORTANT: Use the ServiceAccount created above
      containers:
        - name: lab-orchestration-container
          image: tianshuvuln/lab-orchestration-service:0.1.8 # Your image
          imagePullPolicy: IfNotPresent # Or Always
          ports:
            - containerPort: 8082 # Port the app listens on
